<resources>
    <string name="app_name">Diary</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="sign_up">Cadastrar</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="empty_field">Campo vazio</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="cancel">Cancelar</string>
    <string name="create_an_account">Crie uma conta!</string>
    <string name="password_different">Senhas diferentes</string>
    <string name="OK">OK</string>
    <string name="loading">Carregando</string>
    <string name="request_error">Houve um erro na requisição</string>
    <string name="unknown_error">Erro desconhecido</string>
    <string name="error">Erro</string>
    <string name="connection_error">Erro na conexão</string>
    <string name="search">Pesquisar</string>
    <string name="settings">Configurações</string>
    <string name="theme_settings">Configurar Tema</string>
    <string name="font_settings">Configurar Fonte</string>
    <string name="notification_settings">Configurar Notificação</string>
    <string name="about">Sobre</string>
    <string name="add">Adicionar</string>
    <string name="day">Dia</string>
    <string name="hour">Hora</string>
    <string name="touch_here_to_start_to_write">Toque aqui para começar a escrever...</string>
    <string name="password_must_be_32_characters_or_less">A senha deve ter no máximo 32 caracteres</string>
    <string name="created_on">Criado às </string>
    <string name="filter">Filtro</string>
    <string name="edit">Editar</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Você tem certeza que deseja deletar esta nota?</string>
    <string name="yes">Sim</string>
</resources>
