<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ScrollView"
    tools:context=".gui.SignUpActivity">

    <LinearLayout style="@style/LinearLayoutVertical30">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/create_an_account"
            android:id="@+id/title_sign_up_textview"
            style="@style/title" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutFilledBox"
            android:id="@+id/email_sign_up_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_sign_up_edit"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutFilledBox"
            app:endIconMode="password_toggle"
            android:id="@+id/password_sign_up_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_sign_up_edit"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutFilledBox"
            android:id="@+id/password_confirmation_sign_up_layout"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_confirmation_sign_up_edit"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_sign_up_button"
            android:text="@string/sign_up"
            style="@style/MaterialButtonText"
            android:onClick="signUp"/>


    </LinearLayout>

</ScrollView>