<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <LinearLayout style="@style/LienarLayoutVertical30">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/livro512"
            android:layout_gravity="center_horizontal"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_login_layout"
            style="@style/TextInputLayoutFilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_login_edit"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login_layout"
            style="@style/TextInputLayoutFilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_login_edit"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_login_button"
            android:text="@string/login"
            style="@style/MaterialButtonText"
            android:onClick="login"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign-up_login_button"
            android:text="@string/sign_up"
            style="@style/MaterialButtonText"/>

    </LinearLayout>




</ScrollView>